--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 MONGODB_URI = "mongodb+srv://admin:Kamal2002@cluster0.3khjgko.mongodb.net"
-CLERK_WEBHOOK_SECRET = ""
+CLERK_WEBHOOK_SECRET = "whsec_yQ/4cY2MheprpKl+ia3lA/vekjdwr9mP"
