Adding latest server code

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,14 @@
+JWT_SECRET="portal#secret"
+
+#MongoDB
 MONGODB_URI = "mongodb+srv://admin:Kamal2002@cluster0.3khjgko.mongodb.net"
-CLERK_WEBHOOK_SECRET = "whsec_yQ/4cY2MheprpKl+ia3lA/vekjdwr9mP"
+
+#Cloudinary setup
+CLOUDINARY_NAME="dzcuavd0o"
+CLOUDINARY_API_KEY="739358358638456"
+CLOUDINARY_SECRET_KEY="DFVUKgf_LKmSF90TKGuiWHsBG3k"
+
+#Clerk
+CLERK_WEBHOOK_SECRET = "whsec_OacmjDwXRTU12UqDg6Uaqs18SDlZd4pJ"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZmFjdHVhbC13cmVuLTgwLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_H3y2T8WDjNfDyoext6skG2HxZ10tnSV6LqllXJSI0y
