--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.3.50",
     "@sentry/node": "^9.3.0",
     "@sentry/profiling-node": "^9.3.0",
     "bcrypt": "^5.1.1",
@@ -23,6 +24,7 @@
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "server": "file:",
     "svix": "^1.60.1"
   }
 }
