--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.24.0",
     "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
     "client": "file:",
     "k-convert": "^1.0.6",
     "moment": "^2.30.1",
